Reorder imports according to Google checkstyle